public interface Element {
  void print(VisitorPrint visitorPrint);
}
