@startuml
class Clock{
-Observable observable
-Timer clock
-Clock uniqueInstance
-Clock()
+getInstance():clock
-startTick()
-setTime()
+stopClock()
}

interface Element{
+print()
}

interface VisitorPrint{
print(Tracker)
print(Task)
print(TaskManager)
print(Interval)
}

class Interval{
-Task parentTask
-LocalDateTime startTime
-LocalDateTime endTime
-boolean inProgress
+Interval()
+isInProgress():boolean
+getDuration():Duration
+getEndTime():LocalDateTime
+getEndTimeToString():String
+setEndTime()
+getStartTimeToString():String
+getStartTime():LocalDateTime
+update()
+toString():String
+print()
}

class PrinterVisitor{
+Timer timer
-TaskManager taskManager
+PrinterVisitor()
+print(Tracker)
+print(TaskManager)
+print(Task)
+print(Interval)
+stopPrinting()
+update()
}

class Task{
-TaskManager parentProject
-List<Interval> listIntervals
-boolean active
+Task()
+getListIntervals():List<Interval>
+getStartTimeToString():String
+getEndTimeToString():String
+getStartTime():LocalDateTime
+updateParentEndTime()
+getDuration():Duration
+endInterval()
+createInterval():Interval
+intervalUpdated()
+toString():String
+getEndTime():LocalDateTime
+print()
}

class TaskManager{
-TaskManager parentProject
-List<Tracker> trackers
+TaskManager(String)
+TaskManager(TaskManager,String)
#updateParentEndTime()
+setStartTime()
+getTrackers():List<Tracker>
+getDuration():Duration
+getStartTime():LocalDateTime
+getStartTimeToString():String
+setEndTime()
+getEndTime():LocalDateTime
+getEndTimeToString():String
+addChild(Tracker)
}

class Tracker{
#String name
#LocalDateTime startTime
#LocalDateTime endTime
+Tracker()
#updateParentEndTime()
+getName():String
+getDuration():Duration
+getStartTimeToString():String
+getEndTimeToString():String
+getStartTime():LocalDateTime
+getEndTime():LocalDateTime
}

interface Observer

class Observable

TaskManager"0.." -- "1.." Task
Tracker<|--(TaskManager, Task)
Task"1"*--"0..*"Interval
Interval--|>(Element,Observer)
(Task,TaskManager) o--Tracker
Observable <|-- Clock
Clock --* TimerTask
PrinterVisitor--|>(VisitorPrint,Observer)
(Tracker,TaskManager) --|> Element
Clock o--Tracker

@enduml